// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart snapShot testing renders PieChart correctly 1`] = `
<div
  className=
      ms-PieChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 670px;
      }
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone0"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={350}
      width={600}
    >
      <g
        transform="translate(300, 175)"
      >
        <g
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="{\\"data\\":{\\"y\\":50,\\"x\\":\\"A\\"},\\"index\\":0,\\"value\\":50,\\"startAngle\\":0,\\"endAngle\\":3.1415926535897936,\\"padAngle\\":0}"
          onBlur={[Function]}
          onFocus={[Function]}
          textAnchor="start"
        >
          <path
            className=

                {
                  fill: #e81123;
                  stroke-width: 2px;
                  stroke: #ffffff;
                }
            d="M0,-155A155,155,0,1,1,0,155L0,0Z"
          >
            <desc>
              A
              -
              50
            </desc>
          </path>
          <text
            className=

                {
                  fill: #000000;
                }
            transform="translate(165, 3.6637359812630166e-14)"
          >
            A
            -
            50
          </text>
        </g>
        <g
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="{\\"data\\":{\\"y\\":25,\\"x\\":\\"B\\"},\\"index\\":1,\\"value\\":25,\\"startAngle\\":3.1415926535897936,\\"endAngle\\":4.712388980384691,\\"padAngle\\":0}"
          onBlur={[Function]}
          onFocus={[Function]}
          textAnchor="end"
        >
          <path
            className=

                {
                  fill: #0078d4;
                  stroke-width: 2px;
                  stroke: #ffffff;
                }
            d="M0,155A155,155,0,0,1,-155,0L0,0Z"
          >
            <desc>
              B
              -
              25
            </desc>
          </path>
          <text
            className=

                {
                  fill: #000000;
                }
            transform="translate(-116.67261889578045, 116.67261889578026)"
          >
            B
            -
            25
          </text>
        </g>
        <g
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="{\\"data\\":{\\"y\\":25,\\"x\\":\\"C\\"},\\"index\\":2,\\"value\\":25,\\"startAngle\\":4.712388980384691,\\"endAngle\\":6.283185307179587,\\"padAngle\\":0}"
          onBlur={[Function]}
          onFocus={[Function]}
          textAnchor="end"
        >
          <path
            className=

                {
                  fill: #107c10;
                  stroke-width: 2px;
                  stroke: #ffffff;
                }
            d="M-155,0A155,155,0,0,1,0,-155L0,0Z"
          >
            <desc>
              C
              -
              25
            </desc>
          </path>
          <text
            className=

                {
                  fill: #000000;
                }
            transform="translate(-116.67261889578026, -116.67261889578045)"
          >
            C
            -
            25
          </text>
        </g>
        <use
          xlinkHref="#"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`PieChart snapShot testing renders with colors, width and height data correctly 1`] = `
<div
  className=
      ms-PieChart
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        width: 670px;
      }
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone1"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <svg
      height={300}
      width={600}
    >
      <g
        transform="translate(300, 150)"
      >
        <g
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="{\\"data\\":{\\"y\\":50,\\"x\\":\\"A\\"},\\"index\\":0,\\"value\\":50,\\"startAngle\\":0,\\"endAngle\\":3.1415926535897936,\\"padAngle\\":0}"
          onBlur={[Function]}
          onFocus={[Function]}
          textAnchor="start"
        >
          <path
            className=

                {
                  fill: #e81123;
                  stroke-width: 2px;
                  stroke: #ffffff;
                }
            d="M0,-130A130,130,0,1,1,0,130L0,0Z"
          >
            <desc>
              A
              -
              50
            </desc>
          </path>
          <text
            className=

                {
                  fill: #000000;
                }
            transform="translate(140, 3.108624468950438e-14)"
          >
            A
            -
            50
          </text>
        </g>
        <g
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="{\\"data\\":{\\"y\\":25,\\"x\\":\\"B\\"},\\"index\\":1,\\"value\\":25,\\"startAngle\\":3.1415926535897936,\\"endAngle\\":4.712388980384691,\\"padAngle\\":0}"
          onBlur={[Function]}
          onFocus={[Function]}
          textAnchor="end"
        >
          <path
            className=

                {
                  fill: #0078d4;
                  stroke-width: 2px;
                  stroke: #ffffff;
                }
            d="M0,130A130,130,0,0,1,-130,0L0,0Z"
          >
            <desc>
              B
              -
              25
            </desc>
          </path>
          <text
            className=

                {
                  fill: #000000;
                }
            transform="translate(-98.99494936611674, 98.99494936611659)"
          >
            B
            -
            25
          </text>
        </g>
        <g
          className=

              {
                outline: none;
              }
          data-is-focusable={true}
          id="{\\"data\\":{\\"y\\":25,\\"x\\":\\"C\\"},\\"index\\":2,\\"value\\":25,\\"startAngle\\":4.712388980384691,\\"endAngle\\":6.283185307179587,\\"padAngle\\":0}"
          onBlur={[Function]}
          onFocus={[Function]}
          textAnchor="end"
        >
          <path
            className=

                {
                  fill: #107c10;
                  stroke-width: 2px;
                  stroke: #ffffff;
                }
            d="M-130,0A130,130,0,0,1,0,-130L0,0Z"
          >
            <desc>
              C
              -
              25
            </desc>
          </path>
          <text
            className=

                {
                  fill: #000000;
                }
            transform="translate(-98.99494936611659, -98.99494936611674)"
          >
            C
            -
            25
          </text>
        </g>
        <use
          xlinkHref="#"
        />
      </g>
    </svg>
  </div>
</div>
`;
